tests/errors/standard.x

export let hello_world: char* = "hello, world!\n";

export let number = 21;

enum MyBoolean -> { TRUE, FALSE }

struct A -> { val: int }

let what = A { 2 };

fn add(x: int, y: int) -> int {
    return x + y;
}